fix inteli-input update, fix scrollbar jump on some modals

--- a/src/styles/components/bars/bars.scss
+++ b/src/styles/components/bars/bars.scss
@@ -1026,7 +1026,7 @@ $sidebar-profile-media-width: 80px;
 
   .explore-menu-container {
     position: absolute;
-    top: -12px;
+    top: -11px;
     right: -158px;
     width: 245px;
     text-align: center;
@@ -1037,7 +1037,7 @@ $sidebar-profile-media-width: 80px;
 
   .explore-menu-container-hide {
     position: absolute;
-    top: -12px;
+    top: -11px;
     right: -158px;
     width: 245px;
     text-align: center;
