--- a/src/styles/components/exchange/members.scss
+++ b/src/styles/components/exchange/members.scss
@@ -99,7 +99,7 @@
   }
 
   .member-loading {
-    margin-top: 60px;
+    margin-top: 35px;
     vertical-align: top;
     display: inline-block;
   }
@@ -177,7 +177,7 @@
   }
 
   .member-loading {
-    margin-top: 60px;
+    margin-top: 35px;
     vertical-align: top;
     display: inline-block;
   }
@@ -393,6 +393,7 @@
   color: #d3d3d3;
   width: 95%;
   overflow-y: hidden;
+  word-wrap: break-word;
 }
 
 .member-info-container {
